Mon May  5 17:45:36 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/default_resource.cpp (TAO_Default_Resource_Factory):

	  Initialize the "corba_object_lock_type_" member with
	  "TAO_THREAD_LOCK" in the base member initializer list.  Fixes a
	  problem where the create_corba_object_lock() method had
	  undefined behavior for the default case, i.e. when the user did
	  not explicitly use the "-ORBCorbaObjectLock" resource factory
	  option.

Mon May  5 17:25:50 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/CDR_Encaps_Codec.cpp (encode_value):

	  Fixed problem where encoding a value failed due to
	  incompatibilities between the old Any implementation and the new
	  one.  An ACE_Message_Block must be explicitly allocated and
	  populated if the Any doesn't contain one.  Thanks to Jeff for
	  suggesting the fix.

	* tests/Portable_Interceptors/IORInterceptor/FOO_IORInterceptor.cpp
	  (establish_components):

	  Added some sanity checks.

Mon May  5 18:55:44 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * docs/tutorials/Quoter/AMI/Makefile:
        * docs/tutorials/Quoter/On_Demand_Activation/Makefile:
        * docs/tutorials/Quoter/On_Demand_Activation/server.dsp:
        * examples/Content_Server/AMI_Iterator/Makefile:
        * examples/Content_Server/AMI_Iterator/client.dsp:
        * examples/Content_Server/AMI_Iterator/server.dsp:
        * examples/Content_Server/AMI_Observer/Makefile:
        * examples/Content_Server/AMI_Observer/client.dsp:
        * examples/Content_Server/AMI_Observer/server.dsp:
        * orbsvcs/orbsvcs/CosLoadBalancing.bor:
        * orbsvcs/orbsvcs/CosLoadBalancing.dsp:
        * orbsvcs/orbsvcs/Makefile.CosLoadBalancing:
        * orbsvcs/orbsvcs/PortableGroup.bor:

          Added links and include paths to eliminate build errors
          in these directories.

Mon May  5 17:50:42 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * performance-tests/Latency/AMH/Single_Threaded/Makefile: